--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,9 +1,75 @@
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode.protobuf.socketrpc</groupId>
-	<artifactId>protobuf_socket</artifactId>
+	<artifactId>protobuf_socketrpc</artifactId>
 	<version>1.3.2</version>
-	
+    <name>protobuf socketrpc</name>
+    <description>Google's protocol buffer library makes writing rpc
+    services easy, but it does not contain a rpc implementation. The
+    transport details are left up to the user to implement.
+
+    This is a simple tcp/ip socket based rpc implementation in java
+    for people who want a simple implementation of their protobuf rpc
+    services.</description>
+    <url>http://code.google.com/p/protobuf-socket-rpc/</url>
+    <licenses>
+      <license>
+        <name>MIT</name>
+        <url>LICENSE.txt</url>
+        <distribution>repo</distribution>
+      </license>
+    </licenses>
+    <developers>
+      <developer>
+        <id>sdeo.code</id>
+        <name>Shardul Deo</name>
+        <roles>
+          <role>owner</role>
+          <role>committer</role>
+        </roles>
+      </developer>
+      <developer>
+        <id>liang95037</id>
+        <name>Dan Liang</name>
+        <roles>
+          <role>committer</role>
+        </roles>
+      </developer>
+      <developer>
+        <id>walker.zach</id>
+        <name>Walker Zach</name>
+        <roles>
+          <role>committer</role>
+        </roles>
+      </developer>
+      <developer>
+        <id>jan.dittberner</id>
+        <name>Jan Dittberner</name>
+        <roles>
+          <role>committer</role>
+        </roles>
+      </developer>
+    </developers>
+    <issueManagement>
+      <system>GoogleCode</system>
+      <url>https://code.google.com/p/protobuf-socket-rpc/issues/list</url>
+    </issueManagement>
+    <mailingLists>
+      <mailingList>
+        <name>Discussion Group</name>
+        <post>protobuf-socket-rpc@googlegroups.com</post>
+        <archive>http://groups.google.com/group/protobuf-socket-rpc</archive>
+      </mailingList>
+    </mailingLists>
+    <scm>
+      <connection>scm:svn:http://protobuf-socket-rpc.googlecode.com/svn</connection>
+      <developerConnection>scm:svn:https://protobuf-socket-rpc.googlecode.com/svn</developerConnection>
+      <tag>HEAD</tag>
+      <url>https://code.google.com/p/protobuf-socket-rpc/source/browse/</url>
+    </scm>
+
 	<build>
 	   <plugins>
             <plugin>
@@ -13,7 +79,7 @@
                     <source>1.6</source>
                     <target>1.6</target>
                 </configuration>
-            </plugin>           
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -21,7 +87,7 @@
             </plugin>
         </plugins>
 	</build>
-	
+
 	<dependencies>
 	   <dependency>
             <groupId>junit</groupId>
