copy proto/rpc.proto for source archive generation
* copy proto/rpc.proto to java/src/main/resources and
  python/src/protobuf/socketrpc
* add note to remind copying again if proto/rpc.proto will be changed
  in proto/README
* add profile source-build for building source tarballs by running

  mvn -Psource-build package

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -101,4 +101,35 @@
 			<version>2.3.0</version>
 		</dependency>
 	</dependencies>
+
+    <profiles>
+      <profile>
+        <id>source-build</id>
+        <activation>
+          <activeByDefault>false</activeByDefault>
+        </activation>
+        <build>
+          <plugins>
+            <plugin>
+              <artifactId>maven-assembly-plugin</artifactId>
+              <version>2.2</version>
+              <executions>
+                <execution>
+                  <id>build-source-archives</id>
+                  <phase>package</phase>
+                  <goals>
+                    <goal>single</goal>
+                  </goals>
+                  <configuration>
+                    <descriptorRefs>
+                      <descriptorRef>src</descriptorRef>
+                    </descriptorRefs>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </build>
+      </profile>
+    </profiles>
 </project>
